2005-08-21  Sven Panne  <sven.panne@aedion.de>

	* linux/config-osx.h, linux/configure.ac, linux/INSTALL,
	linux/Makefile.in, linux/src/al_able.c, linux/src/al_buffer.c,
	linux/src/alc/alc_context.c, linux/src/alc/alc_context.h,
	linux/src/alc/alc_device.c, linux/src/alc/alc_device.h,
	linux/src/alc/alc_error.c, linux/src/alc/alc_error.h,
	linux/src/alc/alc_speaker.c, linux/src/alc/alc_speaker.h,
	linux/src/al_doppler.c, linux/src/al_filter.c,
	linux/src/al_filter.h, linux/src/al_listen.c, linux/src/al_main.c,
	linux/src/al_mixer.c, linux/src/al_siteconfig.h,
	linux/src/al_source.c, linux/src/alut/alut_imaadpcm.c,
	linux/src/alut/alut_msadpcm.c, linux/src/alut/alut_rawadpcm.c,
	linux/src/alut/alut_wav.c, linux/src/arch/alsa/alsa.c,
	linux/src/arch/linux/lin_dsp.c,
	linux/src/arch/solaris/solaris_native.c,
	linux/src/arch/waveout/waveout.c,
	linux/src/extensions/al_ext_capture.c,
	linux/src/extensions/al_ext_loki.c, linux/src/Makefile.in,
	linux/test/testcallback.c, linux/test/testcapture.c,
	linux/test/testchannel2.c, linux/test/testchannel.c,
	linux/test/testda.c, linux/test/testdoppler.c,
	linux/test/testgain.c, linux/test/testleak2.c,
	linux/test/testleak.c, linux/test/testlistener2.c,
	linux/test/testlistener3.c, linux/test/testlistener4.c,
	linux/test/testlistener.c, linux/test/testloop.c,
	linux/test/testmp32.c, linux/test/testmp3.c,
	linux/test/testmultialut.c, linux/test/testmulti.c,
	linux/test/testmulticontext2.c, linux/test/testmulticontext.c,
	linux/test/testmultimp3.c, linux/test/testmultinothread.c,
	linux/test/testnothread.c, linux/test/testpause.c,
	linux/test/testpitch2.c, linux/test/testpitch3.c,
	linux/test/testpitch4.c, linux/test/testpitch.c,
	linux/test/testpitchnothread2.c, linux/test/testpitchnothread.c,
	linux/test/testqueue2.c, linux/test/testqueue3.c,
	linux/test/testqueue.c, linux/test/testrelative.c,
	linux/test/testreverb.c, linux/test/testsingle.c,
	linux/test/testsourcestop.c, linux/test/teststartstop.c,